[package]
name = "dory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
doc_markdown = "allow"
missing_docs_in_private_items = "warn"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
